--- a/package.json
+++ b/package.json
@@ -89,6 +89,7 @@
     "webpack-dev-server": "^1.15.0"
   },
   "dependencies": {
+    "classnames": "^2.2.5",
     "preact": "^8.1.0",
     "preact-compat": "^3.13.1",
     "preact-render-to-string": "^3.6.0",
@@ -96,6 +97,7 @@
     "promise-polyfill": "^6.0.2",
     "proptypes": "^0.14.3",
     "pubnub": "^4.8.0",
+    "react-linkify": "^0.2.0",
     "react-virtualized": "^9.7.3",
     "serve": "^5.1.4",
     "whatwg-fetch": "^2.0.3"
