--- a/package.json
+++ b/package.json
@@ -97,9 +97,10 @@
     "promise-polyfill": "^6.0.2",
     "proptypes": "^0.14.3",
     "pubnub": "^4.8.0",
-    "react-linkify": "^0.2.0",
     "react-virtualized": "^9.7.3",
     "serve": "^5.1.4",
+    "tinytime": "^0.2.5",
+    "twitter-text": "^1.14.3",
     "whatwg-fetch": "^2.0.3"
   },
   "main": "webpack.config.babel.js",
