--- a/package.json
+++ b/package.json
@@ -94,6 +94,7 @@
     "preact-compat": "^3.13.1",
     "preact-render-to-string": "^3.6.0",
     "preact-router": "^2.4.1",
+    "preact-shallow-compare": "^1.2.0",
     "promise-polyfill": "^6.0.2",
     "proptypes": "^0.14.3",
     "pubnub": "^4.8.0",
